Refactor `NickWooly`: remove unnecessary semicolons in `MissionService` and replace `remove(0)` with `removeFirst()` in `EventBus` for improved readability.